Axe detected same issue with colour contrast ratio, on the orange button

--- a/static/sass/_settings.scss
+++ b/static/sass/_settings.scss
@@ -7,7 +7,7 @@ $dark-gray: #666;
 $thick-dark-text-shadow: 2px 2px 5px $dark-gray;
 $thin-dark-text-shadow: 1px 1px 1px $dark-gray;
 $thin-light-text-shadow: 0px 0px 1px $light-gray;
-$focal-orange: #fc7625;
+$focal-orange: #fb6304; // not enough contrast: #fc7625;
 
 $button-size : 3rem; 
 $transition: .3s; // increase this to see the transformations in slow-motion
